tests/Checker/everything/errors/11b.vc
void f() { return; }

int main() {
    f;
    return 1;
}
